overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,5 +5,6 @@
   html {
     background-color: white;
     text-align: center;  
+    overflow: hidden;
   }
 
